--- a/src/styles/components/_gradientCards.scss
+++ b/src/styles/components/_gradientCards.scss
@@ -35,7 +35,7 @@ $card-size : (
     justify-content: center;
     padding-top: 22px;
     position: relative;
-    top: 24vh;
+    top: 28vh;
     background-color: black;
     @include grid-rows;
     grid-template-columns: repeat(auto-fill, 225px);
@@ -44,6 +44,7 @@ $card-size : (
     }
     @include l {
         grid-template-columns: repeat(auto-fill, 270px);
+        top: 29vh;
     }
     .card-details{
         padding: 4px 2px 0px 6px;
